switch to multi-module build